tests/negative/bad_export2.toit
// Copyright (C) 2020 Toitware ApS. All rights reserved.

import .bad_export3

export foo
